subjects/simplenote-android-traditional/compilation-test/CenteredImageSpan_0_BinaryMutator-gradlew.out

> Configure project :
Checking whether `configure` binary is present

> Configure project :Simplenote
WARNING: DSL element 'android.viewBinding.enabled' is obsolete and has been replaced with 'android.buildFeatures.viewBinding'.
It will be removed in version 5.0 of the Android Gradle plugin.
Warning: Mapping new ns http://schemas.android.com/repository/android/common/02 to old ns http://schemas.android.com/repository/android/common/01
Warning: Mapping new ns http://schemas.android.com/repository/android/generic/02 to old ns http://schemas.android.com/repository/android/generic/01
Warning: Mapping new ns http://schemas.android.com/sdk/android/repo/addon2/02 to old ns http://schemas.android.com/sdk/android/repo/addon2/01
Warning: Mapping new ns http://schemas.android.com/sdk/android/repo/addon2/03 to old ns http://schemas.android.com/sdk/android/repo/addon2/01
Warning: Mapping new ns http://schemas.android.com/sdk/android/repo/repository2/02 to old ns http://schemas.android.com/sdk/android/repo/repository2/01
Warning: Mapping new ns http://schemas.android.com/sdk/android/repo/repository2/03 to old ns http://schemas.android.com/sdk/android/repo/repository2/01
Warning: Mapping new ns http://schemas.android.com/sdk/android/repo/sys-img2/03 to old ns http://schemas.android.com/sdk/android/repo/sys-img2/01
Warning: Mapping new ns http://schemas.android.com/sdk/android/repo/sys-img2/02 to old ns http://schemas.android.com/sdk/android/repo/sys-img2/01

> Task :Simplenote:preBuild UP-TO-DATE
> Task :Simplenote:preDebugBuild UP-TO-DATE
> Task :Simplenote:compileDebugAidl NO-SOURCE
> Task :Simplenote:compileDebugRenderscript NO-SOURCE
> Task :Simplenote:dataBindingMergeDependencyArtifactsDebug UP-TO-DATE
> Task :Simplenote:generateDebugResValues UP-TO-DATE
> Task :Simplenote:dataBindingMergeGenClassesDebug UP-TO-DATE
> Task :Simplenote:generateDebugResources UP-TO-DATE
> Task :Simplenote:mergeDebugResources UP-TO-DATE
> Task :Simplenote:dataBindingGenBaseClassesDebug UP-TO-DATE
> Task :Simplenote:copyGradlePropertiesIfMissing UP-TO-DATE
> Task :Simplenote:generateDebugBuildConfig UP-TO-DATE
> Task :Simplenote:createDebugCompatibleScreenManifests UP-TO-DATE
> Task :Simplenote:extractDeepLinksDebug UP-TO-DATE
> Task :Simplenote:javaPreCompileDebug UP-TO-DATE
> Task :Simplenote:processDebugManifest UP-TO-DATE
> Task :Simplenote:processDebugResources UP-TO-DATE
> Task :Simplenote:kaptGenerateStubsDebugKotlin
> Task :Simplenote:mergeDebugShaders UP-TO-DATE
> Task :Simplenote:compileDebugShaders NO-SOURCE
> Task :Simplenote:generateDebugAssets UP-TO-DATE
> Task :Simplenote:mergeDebugAssets UP-TO-DATE
> Task :Simplenote:processDebugJavaRes NO-SOURCE
> Task :Simplenote:mergeDebugJniLibFolders UP-TO-DATE
> Task :Simplenote:validateSigningDebug UP-TO-DATE
> Task :Simplenote:mergeDebugNativeLibs UP-TO-DATE
> Task :Simplenote:checkDebugDuplicateClasses UP-TO-DATE
> Task :Simplenote:stripDebugDebugSymbols UP-TO-DATE

> Task :Simplenote:kaptDebugKotlin FAILED
/home/auri/insync/Documentos/feup/tools/Projects/android/simplenote-android-schemata/Simplenote/src/main/java/com/automattic/simplenote/widgets/CenteredImageSpan.java:20: error: duplicate class: com.automattic.simplenote.widgets.CenteredImageSpan
public class CenteredImageSpan extends android.text.style.ImageSpan {
       ^[WARN] 
Running non-incrementally because analyzing file:///home/auri/insync/Documentos/feup/tools/Projects/android/simplenote-android-schemata/Simplenote/src/main/java/com/automattic/simplenote/widgets/CenteredImageSpan.java failed.

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':Simplenote:kaptDebugKotlin'.
> A failure occurred while executing org.jetbrains.kotlin.gradle.internal.KaptExecution
   > java.lang.reflect.InvocationTargetException (no error message)

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output. Run with --scan to get full insights.

* Get more help at https://help.gradle.org

BUILD FAILED in 1s
20 actionable tasks: 2 executed, 18 up-to-date
